[package]
name = "udp_server"
version = "0.1.0"
edition = "2021"

[lib]
name = "lib_udp_server"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
enum_dispatch = "0.3"
